<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="416dp"
        android:layout_height="419dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="351dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VegPlot"
                android:textSize="56sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/border_fondo"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.99">

        <EditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"


            android:background="@drawable/border_input"
            android:hint="@string/input_email"
            android:padding="15dp" />

        <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_input"

            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <Button
            android:id="@+id/btn_inicioSesion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            android:background="@drawable/botonnaranja"
            android:text="ingresar"

            tools:text="@string/btn_ingresar" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_input"
            android:text="@string/btn_registrarse_principal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>