<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesHortaliza">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imagenDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ejhortaliza" />


                <TextView
                    android:id="@+id/nombreDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="zanahoria"
                    android:textColor="@color/white"
                    android:textSize="50sp"

                    />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="534dp"
                android:background="#9F8BC34A"
                android:orientation="vertical"

                android:padding="5dp">
                <!-- descripcion-->

                    <LinearLayout



                        android:layout_width="380dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_input"
                        android:backgroundTint="#FFFCFC"
                        android:orientation="vertical"
                        android:padding="5dp">


                                <TextView
                                    android:id="@+id/descripcion"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="descripcion asdasdasdasd"
                                    android:textSize="18sp" />





                    </LinearLayout>

                <!-- modo de siembra-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_modoSiembra"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border_input"
                    android:backgroundTint="#FFFCFC"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_germinacion"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/germinacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="germinacion"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_profundidad"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/profundidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="profundidad"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_distancia"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/distancia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="distancia"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_temporada"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/temporada"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="temporada"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>
                <!-- modo de cultivo-->
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_culvito"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border_input"
                    android:backgroundTint="#FFFCFC"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_altura"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/altura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="altura"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_cosecha"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/cosecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="cosecha"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_riego"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/riego"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="riego"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_modoSiembra"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/siembra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="siembra"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</FrameLayout>